kustomize-deployments/enable-hsts-on-console-routes/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console
  namespace: openshift-console
  annotations:
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;includeSubDomains;preload"
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: downloads
  namespace: openshift-console
  annotations:
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;includeSubDomains;preload"
...
